--- a/FINKNI-vtor obid/FINKNI-vtor obid.csproj
+++ b/FINKNI-vtor obid/FINKNI-vtor obid.csproj
@@ -128,8 +128,20 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="KreiranjeNalog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KreiranjeNalog.Designer.cs">
+      <DependentUpon>KreiranjeNalog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SintetickoKonto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SintetickoKonto.Designer.cs">
+      <DependentUpon>SintetickoKonto.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="CrystalReport1.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>CrystalReport1.cs</LastGenOutput>
