--- a/FINKNI-Data/FINKNIAna-Data.csproj
+++ b/FINKNI-Data/FINKNIAna-Data.csproj
@@ -43,6 +43,8 @@
     <Compile Include="AnalitickoKonto.cs" />
     <Compile Include="AnalitickoKontoDB.cs" />
     <Compile Include="AppDB.cs" />
+    <Compile Include="Nalog.cs" />
+    <Compile Include="NalogDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
